# bossassistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bossassistant.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: portfolio.md
evals/: .gitignore  questions.jsonl
frontend/: .env.example  package-lock.json
frontend/src/: App.css  App.tsx  index.css
notebooks/: 01_prototype.ipynb
scripts/: run_eval.py
src/app/: config.py  db.py  observability.py
src/app/agents/: router.py
src/app/api/: main.py
src/app/retrieval/: rag.py
tests/: conftest.py  test_api.py  test_retrieval_helpers.py  test_router_helpers.py  test_router_integration.py  test_run_eval.py
