[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nando", email = "lenando0307@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
